--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,11 @@
 manifest:
   remotes:
-    - name: benvallack
-      url-base: https://github.com/benvallack
+    - name: 05bmckay
+      url-base: https://github.com/05bmckay
   projects:
     - name: zmk
-      remote: benvallack
-      revision: with-tap-dance
+      remote: 05bmckay
+      revision: mouse-pr
       import: app/west.yml
   self:
     path: config
